;;;; -*- coding: utf-8; fill-column: 78 -*-

changes in sbcl-1.3.10 relative to sbcl-1.3.9:
  * enhancement: more compact low-level error signaling code
  * enhancement: more compact encoding of cross-reference information
  * optimization: faster out of line fixnum-float comparisons.
  * optimization: filling a known simple-vector with a constant value
    is about as fast in unoptimized code as in code compiled with (SPEED 3),
    and the x86-64 implementation is able to use SSE instructions.
  * bug fix: correctly handle the case of a non-local exit within a function
    terminating the extent of dynamic-extent functions and variables in the
    presence of multiple-values (lp#1563127)
  * bug fix: restore builds on the latest OSX with the latest Xcode
    (lp#1470996)

changes in sbcl-1.3.9 relative to sbcl-1.3.8:
  * minor incompatible change: NAMESTRING prefers to return a BASE-STRING
    instead of (ARRAY CHARACTER (*)) when possible.
  * enhancement: cached make-instance/allocate-instance constructors can now
    get garbage collected.
  * optimization: better performance for some unoptimized operations on
    complex numbers.
  * bug fix: using the options :LOCAL-NICKNAMES and :LOCK in the same
    DEFPACKAGE form no longer signals a bogus error

changes in sbcl-1.3.8 relative to sbcl-1.3.7:
  * minor incompatible change: the system now understands that the CONDITION
    type is disjoint with many other system types.
  * minor incompatible change: argument types in condition report functions
    are now declared (in combination with the above change, this can result in
    early detection of erroneous code).
  * enhancement: simple arrays of any rank can be stack-allocated
    on platforms supporting stack allocation of vectors.
  * optimization: improved type derivation for FIND, POSITION, COUNT, SEARCH,
    MISMATCH and other array and sequence functions.
  * optimization: ALLOCATE-INSTANCE is now as fast as MAKE-INSTANCE.