@@ -1,5 +1,9 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-1.3.10:
+  * enhancement: TRACE ... :REPORT {TRACE,NIL} now work as advertised in the
+    documentation string (based on patch by Patrick Stein)
+
 changes in sbcl-1.3.10 relative to sbcl-1.3.9:
   * enhancement: more compact low-level error signaling code
   * enhancement: more compact encoding of cross-reference information
